--- a/srpski.html
+++ b/srpski.html
@@ -30,52 +30,56 @@
     </head>
 
     <body>
+
         <div class="container">
-            <a href="srpski.html" class="srpski"><img src="./img/srpska_zastava.png" alt="Serbian flag"></a>
+            <a href="index.html" class="english"><img src="./img/england_flag.png" alt="England flag"></a>
             <h1>The Resume/CV</h1>
             <div class="row">
                 <div class="col left">
                     <img src="./img/IMG_129.jpg" alt="profile picture">
                     <!-- ABOUT ME SECTION  -->
                     <section class="about-me">
-                        <h2>About me</h2>
+                        <h2>O Meni</h2>
                         <p>Hello World!</p>
-                        <p>I am a self taught Front End Developer from Novi Sad, Serbia.
-                            Husband, father of three small kids, dog owner - Labrador Retriever are best, veteran
-                            basketball player, former free climber and camping lover.
+                        <p>Ja sam samouki Front End Developer iz Novog Sada, Srbija. Suprug, otac troje male
+                            dece, vlasnik psa - Labrador Retriveri su SUPER, zaljubljenik u košarku, bivši
+                            free
+                            climber i ljubitelj kampovanja i prirode.
                         </p>
-                        <p>I started coding few years ago, just for fun and now decided to find job in IT world. In
-                            end
-                            of year
-                            2020. I have start taking coding courses over the internet.</p>
-                        <p>When I am not coding you will find me in the gym, on the court shooting some hoops or on
-                            camping.</p>
+                        <p>Sa kodiranjem sam započeo pre nekoliko godina iz zabave, a sad sam odlučio da
+                            pronađem posao u IT svetu. Krajem 2020. godine počeo sam da pratim kurseve
+                            kodiranja
+                            preko interneta.</p>
+                        <p>Kada ne kodiram pronaći ćete me u teretani, košarkaškom terenu ili na kampovanju.
+                        </p>
+                        <p>Ma koga ja lažem: verovatno sam negde na pivu sa prijateljima.</p>
                     </section>
                     <!-- CONTACT SECTION  -->
                     <section class="contact">
-                        <h2>Contact</h2>
-                        <p><i class="fas fa-mobile-alt"></i><a href="tel:+38162421903"> +381 62 421903</a></p>
+                        <h2>Kontakt</h2>
+                        <p><i class="fas fa-mobile-alt"></i><a href="tel:+38162421903"> +381 62 421903</a>
+                        </p>
                         <p><i class="fas fa-at"></i> ilija009@gmail.com</p>
-                        <p><i class="fas fa-map-marker-alt"></i> Novi Sad, Serbia</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Novi Sad, Srbija</p>
                     </section>
                     <!-- FOLLOW ME SECTION  -->
                     <section class="follow-me">
-                        <h2>Follow me</h2>
+                        <h2>Zaprati me</h2>
                         <div class="follow-me-icons">
                             <a href="https://www.facebook.com/ilija.radovanovic1" target="_blank">
-                                <i class="fab fa-facebook-square"></i><span class="social-icon-text">Facebook</span>
+                                <i class="fab fa-facebook-square"></i><span class="social-icon-text">Fejsbuk</span>
                             </a>
                             <a href="https://www.instagram.com/ilija009" target="_blank">
                                 <i class="fab fa-instagram"></i><span class="social-icon-text">Instagram</span>
                             </a>
                             <a href="https://www.twitter.com/ilija0009" target="_blank">
-                                <i class="fab fa-twitter-square"></i><span class="social-icon-text">Twitter</span>
+                                <i class="fab fa-twitter-square"></i><span class="social-icon-text">Tviter</span>
                             </a>
                         </div>
                     </section>
                     <!-- SKILLS SECTION  -->
                     <section class="skills">
-                        <h2>Skills</h2>
+                        <h2>Veštine</h2>
                         <ul>
                             <li>HTML5</li>
                             <li>CSS3</li>
@@ -88,20 +92,20 @@
                     </section>
                     <!-- LANGUAGES SECTION  -->
                     <section class="languages">
-                        <h2>Languages</h2>
+                        <h2>Jezici</h2>
                         <ul>
-                            <li>Serbian</li>
-                            <li>English</li>
+                            <li>Srpski</li>
+                            <li>Engleski</li>
                         </ul>
                     </section>
                     <!-- INTERESTS SECTION -->
                     <section class="interests">
-                        <h2>Interests and hobbies</h2>
+                        <h2>Intersovanja i hobiji</h2>
                         <ul>
-                            <li>Coding</li>
-                            <li>Basketball</li>
-                            <li>Free Climbing</li>
-                            <li>Camping</li>
+                            <li>Kodiranje</li>
+                            <li>Košarka</li>
+                            <li>Slobodno penjanje</li>
+                            <li>Kampovanje</li>
                         </ul>
                     </section>
                 </div>
@@ -113,21 +117,22 @@
                     </section>
                     <!-- WORK SECTION  -->
                     <section class="work">
-                        <h2>My Work</h2>
-                        <p>on github.com</p>
+                        <h2>Moji radovi</h2>
+                        <p>na github.com</p>
                         <ul>
                             <li>
-                                My portfolio page: <br>
+                                Moj portfolio stranica: <br>
                                 <a href="https://janavukhana.github.io/personalSite/"
                                     target="_blank">janavukhana.github.io/personalSite</a>
                             </li>
-                            <li>Muffin and Cakes page: <br> <a href="https://janavukhana.github.io/dzidzabidzice/"
+                            <li>Muffin and Cakes stranica: <br> <a href="https://janavukhana.github.io/dzidzabidzice/"
                                     target="_blank">janavukhana.github.io/dzidzabidzice</a>
                             </li>
-                            <li>Apartment at Divčibare page: <br> <a href="https://janavukhana.github.io/divcibareApp/"
+                            <li>Apartment at Divčibare stranica: <br> <a
+                                    href="https://janavukhana.github.io/divcibareApp/"
                                     target="_blank">janavukhana.github.io/divcibareApp</a>
                             </li>
-                            <li>Sanitetski prevoz page: <br> <a
+                            <li>Sanitetski prevoz stranica: <br> <a
                                     href="https://janavukhana.github.io/sanitetskiTransport/"
                                     target="_blank">janavukhana.github.io/sanitetskiTransport</a></li>
 
@@ -135,7 +140,7 @@
                     </section>
                     <!-- COURSES AND TRAINING SECTION  -->
                     <section class="courses-and-training">
-                        <h2>Courses and training</h2>
+                        <h2>Kursevi i trening</h2>
                         <h3>my self tought training</h3>
                         <ul>
                             <li>www.freecodecamp.org</li>
@@ -177,41 +182,44 @@
                     </section>
                     <!-- MY MOTIVATION SECTION -->
                     <section class="my-motivation">
-                        <h2>My motivation</h2>
-                        <h3>Why I want to find web development job?</h3>
+                        <h2>Motivacija</h2>
+                        <h3>Zašto želim da se zaposlim kao programer?</h3>
                         <ul>
-                            <li>Want to find mentor/team where I can learn and upgrade my coding skills</li>
-                            <li>I like to communicate with computer</li>
-                            <li>Enjoy in fixing code and making things work</li>
-                            <li>Love JavaScript logic and syntax</li>
+                            <li>Želim da pronađem mentora/tim gde mogu da učim i nadograđujem svoje
+                                programersko
+                                znanje</li>
+                            <li>Volim da komuniciram sa kompijuterom</li>
+                            <li>Uživam u popravljanju koda i činjenju da kod funkcioniše</li>
+                            <li>Volim javaScript logiku i sintaksu</li>
                         </ul>
                     </section>
                     <!-- EXPERIENCES SECTION  -->
                     <section class="experiences">
-                        <h2>Experiences</h2>
-                        <p>No working experience in web devolopment yet but lots of enthusiasm.</p>
+                        <h2>Iskustvo</h2>
+                        <p>Nemam radno iskustvo kao programer još uvek, ali sam pun entuzijazma.</p>
                     </section>
                     <!-- PREVIOUS JOBS SECTION -->
                     <section class="previous-jobs">
-                        <h2>Previous jobs</h2>
-                        <p>Worked in travel agency "Arka Tours" in Novi Sad from 2008. until 2019.
-                            Only part of the job related to IT was maintenance (uploading content) web site page in
-                            WordPress.
+                        <h2>Prethodni posao</h2>
+                        <p>Radio sam u turističkoj agenciji "Arka Tours" u Novom Sadu od 2008. do 2019.
+                            godine.
+                            Jedini deo posla koji je donekle povezan sa IT je bio održavanje(unošenje
+                            sadržaja)
+                            sajta koji je bio urađen u WordPress-u.
                         </p>
                     </section>
                     <!-- EDUCATION SECTION -->
                     <section class="education">
-                        <h2>Education</h2>
-                        <p>Svetozar Marković, Novi Sad - high school</p>
-                        <p>TIMS - faculty of sport and tourism, Novi Sad</p>
+                        <h2>Obrazovanje</h2>
+                        <p>Svetozar Marković, Novi Sad - srednja škola</p>
+                        <p>TIMS - fakultet za sport i turizam, Novi Sad</p>
                     </section>
 
                 </div>
             </div>
         </div>
 
-
-        <script src="/script.js" type="text/javascript"></script>
+        <script src="script.js" type="text/javascript"></script>
     </body>
 
 </html>
