added skill Node.js

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                             <li>Responsive Design</li>
                             <li>Bootstrap</li>
                             <li>React (still learning)</li>
+                            <li>Node.js (still learnin)</li>
                         </ul>
                     </section>
                     <!-- LANGUAGES SECTION  -->
