--- a/srpski.html
+++ b/srpski.html
@@ -88,6 +88,7 @@
                             <li>Responsive Design</li>
                             <li>Bootstrap</li>
                             <li>React (still learning)</li>
+                            <li>Node.js (still learning)</li>
                         </ul>
                     </section>
                     <!-- LANGUAGES SECTION  -->
