--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                             <li>jQuery</li>
                             <li>Responsive Design</li>
                             <li>Bootstrap</li>
+                            <li>Git</li>
                             <li>React (still learning)</li>
                             <li>Node.js (still learnin)</li>
                         </ul>
