--- a/srpski.html
+++ b/srpski.html
@@ -87,6 +87,7 @@
                             <li>jQuery</li>
                             <li>Responsive Design</li>
                             <li>Bootstrap</li>
+                            <li>Git</li>
                             <li>React (still learning)</li>
                             <li>Node.js (still learning)</li>
                         </ul>
