--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                             <li>javaScript</li>
                             <li>jQuery</li>
                             <li>Responsive Design</li>
+                            <li>Node.js</li>
                             <li>Bootstrap</li>
                             <li>Git</li>
                             <li>React (still learning)</li>
-                            <li>Node.js (still learnin)</li>
                         </ul>
                     </section>
                     <!-- LANGUAGES SECTION  -->
@@ -116,13 +116,19 @@
                     <!-- WORK SECTION  -->
                     <section class="work">
                         <h2>My Work</h2>
-                        <p>on github.com</p>
+                        <p>on github.com and heroku.com</p>
                         <ul>
                             <li>
                                 My portfolio page: <br>
-                                <a href="https://janavukhana.github.io/personalSite/"
-                                    target="_blank">janavukhana.github.io/personalSite</a>
+                                <a href="https://mighty-mountain-20028.herokuapp.com/"
+                                    target="_blank">mighty-mountain-20028.herokuapp.com</a>
                             </li>
+                            <li>
+                                Wedding invitation page: <br>
+                                <a href="https://cryptic-reef-32605.herokuapp.com/"
+                                    target="_blank">cryptic-reef-32605.herokuapp.com</a>
+                            </li>
+
                             <li>Muffin and Cakes page: <br> <a href="https://janavukhana.github.io/dzidzabidzice/"
                                     target="_blank">janavukhana.github.io/dzidzabidzice</a>
                             </li>
