--- a/srpski.html
+++ b/srpski.html
@@ -86,10 +86,10 @@
                             <li>javaScript</li>
                             <li>jQuery</li>
                             <li>Responsive Design</li>
+                            <li>Node.js</li>
                             <li>Bootstrap</li>
                             <li>Git</li>
                             <li>React (still learning)</li>
-                            <li>Node.js (still learning)</li>
                         </ul>
                     </section>
                     <!-- LANGUAGES SECTION  -->
@@ -120,12 +120,17 @@
                     <!-- WORK SECTION  -->
                     <section class="work">
                         <h2>Moji radovi</h2>
-                        <p>na github.com</p>
+                        <p>na github.com i heroku.com</p>
                         <ul>
                             <li>
                                 Moj portfolio stranica: <br>
-                                <a href="https://janavukhana.github.io/personalSite/"
-                                    target="_blank">janavukhana.github.io/personalSite</a>
+                                <a href="https://mighty-mountain-20028.herokuapp.com/"
+                                    target="_blank">mighty-mountain-20028.herokuapp.com</a>
+                            </li>
+                            <li>
+                                Pozivnica za venčanje: <br>
+                                <a href="https://cryptic-reef-32605.herokuapp.com/"
+                                    target="_blank">cryptic-reef-32605.herokuapp.com</a>
                             </li>
                             <li>Muffin and Cakes stranica: <br> <a href="https://janavukhana.github.io/dzidzabidzice/"
                                     target="_blank">janavukhana.github.io/dzidzabidzice</a>
