add the Band page

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             <li>Muffin and Cakes page: <br> <a href="https://janavukhana.github.io/dzidzabidzice/"
                                     target="_blank">janavukhana.github.io/dzidzabidzice</a>
                             </li>
-                            <li>Apartment at Divčibare page: <br> <a href="https://janavukhana.github.io/divcibareApp/"
-                                    target="_blank">janavukhana.github.io/divcibareApp</a>
+                            <li>The Band page: <br> <a href="https://janavukhana.github.io/band/"
+                                    target="_blank">janavukhana.github.io/band</a>
                             </li>
                             <li>Sanitetski prevoz page: <br> <a
                                     href="https://janavukhana.github.io/sanitetskiTransport/"
