--- a/srpski.html
+++ b/srpski.html
@@ -135,9 +135,8 @@
                             <li>Muffin and Cakes stranica: <br> <a href="https://janavukhana.github.io/dzidzabidzice/"
                                     target="_blank">janavukhana.github.io/dzidzabidzice</a>
                             </li>
-                            <li>Apartment at Divčibare stranica: <br> <a
-                                    href="https://janavukhana.github.io/divcibareApp/"
-                                    target="_blank">janavukhana.github.io/divcibareApp</a>
+                            <li>The Band stranica: <br> <a href="https://janavukhana.github.io/band/"
+                                    target="_blank">janavukhana.github.io/band/</a>
                             </li>
                             <li>Sanitetski prevoz stranica: <br> <a
                                     href="https://janavukhana.github.io/sanitetskiTransport/"
