add Zdrav zivot page

--- a/index.html
+++ b/index.html
@@ -135,9 +135,8 @@
                             <li>The Band page: <br> <a href="https://janavukhana.github.io/band/"
                                     target="_blank">janavukhana.github.io/band</a>
                             </li>
-                            <li>Sanitetski prevoz page: <br> <a
-                                    href="https://janavukhana.github.io/sanitetskiTransport/"
-                                    target="_blank">janavukhana.github.io/sanitetskiTransport</a></li>
+                            <li>Health life page: <br> <a href="https://janavukhana.github.io/zdrav-zivot/"
+                                    target="_blank">janavukhana.github.io/zdrav-zivot</a></li>
 
                         </ul>
                     </section>
