--- a/srpski.html
+++ b/srpski.html
@@ -138,9 +138,8 @@
                             <li>The Band stranica: <br> <a href="https://janavukhana.github.io/band/"
                                     target="_blank">janavukhana.github.io/band/</a>
                             </li>
-                            <li>Sanitetski prevoz stranica: <br> <a
-                                    href="https://janavukhana.github.io/sanitetskiTransport/"
-                                    target="_blank">janavukhana.github.io/sanitetskiTransport</a></li>
+                            <li>Zdrav život stranica: <br> <a href="https://janavukhana.github.io/zdrav-zivot/"
+                                    target="_blank">janavukhana.github.io/zdrav-zivot</a></li>
 
                         </ul>
                     </section>
